# auto_homework

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt  setup.py
input_file/: add.docx  test.docx  test.txt  test_docx.docx  숙제2 (copy).pptx
