[tool.poetry]
name = "repl_nix_autohomework"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
docx = "^0.2.4"
fitz = "^0.0.1-alpha.2"
openai = "^0.27.4"
python-pptx = "^0.6.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
